--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,13 @@ layout: default
 <h1>{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
-<p>ITS HERE!</p>
-
 <div class="post">
   {{ content }}
 </div>
+
+			<!-- Post comments -->
+			<div class="notecomments">
+				{% include disqus.html %}	 
+			</div>
 
 
