--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<link rel="stylesheet" href="css/lavish-bootstrap.css">
+			{% include page-elements/head.html %}
 		</head>
 		<body>
 			<nav>
